--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Recycler HW</string>
     <string name="content">Hello</string>
+    <string name="animate">Animate</string>
 </resources>
